[gd_scene load_steps=4 format=3 uid="uid://b3oqb6cta2a7l"]

[ext_resource type="Script" path="res://game/scenes/Electronics_lab/components/resistor.gd" id="1_luxx6"]
[ext_resource type="Texture2D" uid="uid://c2w1ux5apl12c" path="res://game/assets/textures/resistor.png" id="2_eoyc6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8g5cm"]
size = Vector2(116, 48.25)

[node name="resistor" type="Area2D"]
script = ExtResource("1_luxx6")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(1.68, 1.581)
texture = ExtResource("2_eoyc6")

[node name="r_collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8g5cm")

[node name="menu" type="Control" parent="."]
process_mode = 1
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OptionButton" type="OptionButton" parent="menu"]
layout_mode = 0
offset_left = 111.0
offset_top = -53.0
offset_right = 156.0
offset_bottom = -22.0
item_count = 2
selected = 0
fit_to_longest_item = false
popup/item_0/text = "ohm"
popup/item_0/id = 0
popup/item_1/text = "kilo ohm"
popup/item_1/id = 1

[node name="Resistance" type="LineEdit" parent="menu"]
layout_mode = 0
offset_left = -17.0
offset_top = -53.0
offset_right = 113.0
offset_bottom = -22.0
theme_override_font_sizes/font_size = 16
text = "470"
alignment = 2
max_length = 4
context_menu_enabled = false
virtual_keyboard_type = 2

[node name="Label" type="Label" parent="menu"]
layout_mode = 0
offset_left = -16.0
offset_top = -51.0
offset_right = 84.0
offset_bottom = -21.88
scale = Vector2(0.95, 0.95)
theme_override_font_sizes/font_size = 16
text = "Resistance"

[node name="color_band" type="Node2D" parent="."]
scale = Vector2(0.705, 0.705)

[node name="band_1" type="ColorRect" parent="color_band"]
offset_left = -31.0
offset_top = -18.0
offset_right = -24.0
offset_bottom = 18.0

[node name="band_2" type="ColorRect" parent="color_band"]
offset_left = -18.0
offset_top = -18.0
offset_right = -11.0
offset_bottom = 18.0

[node name="band_3" type="ColorRect" parent="color_band"]
offset_left = -4.0
offset_top = -18.0
offset_right = 3.0
offset_bottom = 18.0

[node name="band_4" type="ColorRect" parent="color_band"]
offset_left = 10.0
offset_top = -18.0
offset_right = 17.0
offset_bottom = 18.0

[node name="band_5" type="ColorRect" parent="color_band"]
offset_left = 23.0
offset_top = -18.0
offset_right = 30.0
offset_bottom = 18.0
color = Color(1, 0.843137, 0, 1)

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="text_changed" from="menu/Resistance" to="." method="_on_resistance_text_changed"]
[connection signal="text_submitted" from="menu/Resistance" to="." method="_on_resistance_text_submitted"]
